# clients

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  backend_deploy.sh  clients.xlsx  deploy.sh  jsconfig.json  manage.py  mypy.ini  new_data.csv  package.json  pyproject.toml  requirements.txt  todo.txt  utils.py
.github/workflows/: django.yml
apps/bids/: admin.py  apps.py  managers.py  models.py  permissions.py  routers.py  serializers.py  urls.py  viewsets.py
apps/bids/migrations/: 0001_initial.py  0002_auto_20200808_1327.py  0002_bid_created_at.py  0003_auto_20200611_1423.py  0003_remove_bid_status.py  0004_auto_20200611_1426.py  0004_auto_20200808_1906.py  0005_auto_20200809_0046.py  0005_remove_bid_annual_consumption.py  0006_auto_20200809_0059.py  0006_bid_status.py  0007_auto_20200809_0101.py  0007_bid_card.py  0008_auto_20200809_0202.py  0008_remove_bid_card.py  0009_auto_20200615_0356.py  0009_auto_20200816_0346.py  0010_auto_20200911_1319.py  0010_bidstory.py  0011_auto_20200616_1045.py  0011_bid_paid.py  0012_auto_20200616_1045.py  0012_auto_20200911_1541.py  (+19 more)
apps/calculator/: admin.py  apps.py  calculator.py  fields.py  filters.py  managers.py  models.py  pagination.py  permissions.py  routers.py  serializers.py  urls.py  validators.py  views.py  viewsets.py
apps/cards/: apps.py  models.py  permissions.py  routers.py  rules.py  serializers.py  urls.py  viewsets.py
apps/chat/: auth.py  consumers.py  models.py  routers.py  routing.py  serializers.py  urls.py  viewsets.py
apps/cv_integration/: apps.py  models.py  routers.py  serializers.py  urls.py  viewsets.py
apps/info/: apps.py  models.py  permissions.py  routers.py  serializers.py  urls.py  viewsets.py
apps/logs/: routers.py  serializers.py  urls.py  viewsets.py
apps/tramitacion/: admin.py  apps.py  models.py  permissions.py  routers.py  serializers.py  tests.py  urls.py  viewsets.py
apps/users/: admin.py  auth.py  filters.py  managers.py  models.py  pagination.py  permissions.py  routers.py  serializers.py  urls.py  utils.py  validators.py  views.py  viewsets.py
clients/: asgi.py  middleware.py  serializers.py  settings.py  urls.py  utils.py  wsgi.py
frontend/: .eslintrc.js  .gitignore  .prettierrc  README.md  nuxt.config.js  package.json
frontend/components/: BidDetail.vue  CalculatorDetails.vue  CardDetail.vue  DateTimeFilter.vue  Ficha.vue  GGLogo.vue  Propuesta.vue  SolicitudesProcess.vue  ThemeSwitcher.vue  detailOffer.vue  notys.vue
frontend/layouts/: default.vue
frontend/lib/: constants.js
frontend/middleware/: authenticated.js
frontend/pages/: calc.vue  calculator.vue  comparador.vue  creador_de_propuesta.vue  index.vue  info.vue  login.vue  login_agente.vue  plugin.vue  profile.vue  settings.vue
frontend/plugins/: formdesigner.js  localStorage.js  vue-beautiful-chat.js
frontend/store/: bids.js  chat.js  index.js
templates/mails/: new_offer.html  offer.html
templates/user/: register_email.html  reset_password.html
(+298 files in other folders)
