[tool.poetry]
name = "clients"
version = "0.1.0"
description = "clients project"
authors = ["Artur Filimonov <artfil@protonmail.com>"]
license = "Proprietary"
homepage = "https://areaclientes.gestiongroup.es"
repository = "https://github.com/FilArt/clients"
keywords = ["clients", "crm", "vuejs", "drf"]

[tool.poetry.dependencies]
python = ">=3.8"
django = "^3.1"
arrow = "^0.16"
channels-redis = "^3.0.1"
django-cors-headers = "^3.4.0"
django-filter = "^2.3.0"
djangorestframework-simplejwt = "^4.4"
djangorestframework = "^3.11.1"
drf-dynamic-fields = "^0.3.1"
drf-nested-routers = "^0.91"
Pillow = "^9.0.0"
psycopg2-binary = "^2.8.5"
python-telegram-bot = "^12.8"
sentry-sdk = "*"
pytz = "^2020.1"
channels = "^3.0.4"
ipython = "^7.17.0"
django-jazzmin = "^2.2.6"
drf-api-tracking = "^1.7.5"
django-notifications-hq = "^1.6.0"
pyaml = "^20.4.0"
ujson = "^4.0.1"
pdfkit = "^0.6.1"
requests = "^2.25.1"
poetry = "^1.1.4"
setuptools = "^51.1.2"
tqdm = "^4.56.0"
pandas = "^1.2.1"
openpyxl = "^3.0.6"
django-unused-media = "^0.2.2"
email-validator = "^1.1.2"
jedi = "0.17.2"
orjson = "^3.6.0"
dirtyjson = "^1.0.7"
progressbar2 = "^3.53.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pre-commit = "^2.6.0"
django-stubs = "^1.5.0"
djangorestframework-stubs = "^1.2.0"
lxml = "^4.5.2"
black = {version = "^20.8b1", allow-prereleases = true}
flake8-mypy = "^17.8.0"
Cython = "^0.29.21"
aiohttp = "^3.7.4"
aiohttp_cors = "^0.7.0"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
